--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header{
     background-image: url(https://i.imgur.com/FEYEWuK.png);
     background-size: cover;
     height: 500px;
+    width: 100vw;
     color: white;
 }
 
@@ -86,7 +87,11 @@ input#button:hover{
 }
 
 .text p{
-    padding: 30px 0 20px;
+    padding: 30px 0 25px;
+}
+
+.text h1{
+    font-size: 45px;
 }
 
 .big-button{
@@ -102,3 +107,7 @@ input#button:hover{
     background-color: black;
     color: white;
 }
+
+            /* MAIN SECTION ONE */
+
+L
