--- a/css/style.css
+++ b/css/style.css
@@ -79,19 +79,19 @@ input#button:hover{
             /* TEXT SECTION */
 
 
+h1{
+    font-size: 45px;
+}
+
+p{
+    padding: 30px 0 25px;
+}
+
 .text{
     width: 42%;
     margin: auto;
     padding-top: 95px;
     text-align: center;
-}
-
-.text p{
-    padding: 30px 0 25px;
-}
-
-.text h1{
-    font-size: 45px;
 }
 
 .big-button{
@@ -110,4 +110,9 @@ input#button:hover{
 
             /* MAIN SECTION ONE */
 
-L
+#text-two{
+    width: 50%;
+    padding: 100px 200px;
+}
+
+
