--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-            /* TOOLBAR */
+            /* GENERAL DOC INFO */
+
 
 *{
     margin: 0;
@@ -23,6 +24,31 @@ body{
 .fr{
     float: right;
 }
+
+input:hover{
+    color: white;
+    background-color: rgb(230, 120, 230);
+    cursor: pointer;
+}
+
+input{
+    border: none;
+}            
+
+h1{
+    font-size: 45px;
+}
+
+p{
+    padding: 30px 0 25px;
+}
+
+.centered{
+    text-align: center;
+}
+
+            /* TOOLBAR */
+
 
 header{
     background-image: url(https://i.imgur.com/FEYEWuK.png);
@@ -69,29 +95,14 @@ nav{
     color: blue;
 }
 
-input#button:hover{
-    color: white;
-    background-color: rgb(230, 120, 230);
-    cursor: pointer;
-}
-
 
             /* TEXT SECTION */
 
-
-h1{
-    font-size: 45px;
-}
-
-p{
-    padding: 30px 0 25px;
-}
 
 .text{
     width: 42%;
     margin: auto;
     padding-top: 95px;
-    text-align: center;
 }
 
 .big-button{
@@ -108,11 +119,49 @@ p{
     color: white;
 }
 
-            /* MAIN SECTION ONE */
+            /* MAIN SECTION CHARACTERISTICS */
 
-#text-two{
-    width: 50%;
-    padding: 100px 200px;
+
+
+.view-height{
+    height: 75vh;
+    padding: 100px 10px 0 0;
+    width: 70%;
+    margin: auto;
 }
 
+.text-two{
+    width: 30%;
+}
+
+.img-characteristics{
+    width: 80%;
+}
+
+#centered-img{
+    padding-left: 65px;
+}
+
+.bg-lightgrey{
+    background-color: rgb(227, 234, 252);
+    width: 100vw;
+    height: 100%;
+    /* padding: 10px 0; */
+}
+
+.longer{
+    height: 1000px;
+}
+
+#center-img{
+    margin: 20px 200px 20px 0;
+}
+
+#download-2{
+    background-color: rgb(149, 149, 235);
+    color: white;
+    display: block;
+    margin: auto;
+    margin-top: 30px;
+}
 
